[gd_scene load_steps=50 format=3 uid="uid://sq48kvqp824e"]

[ext_resource type="Script" path="res://beta_test_screen.gd" id="1_cgppg"]
[ext_resource type="Texture2D" uid="uid://krl45pu0tsys" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Terrain/Ground/Tilemap_Flat.png" id="2_1mnu3"]
[ext_resource type="Script" path="res://Character.gd" id="3_2a16f"]
[ext_resource type="Texture2D" uid="uid://cbr0d8eyd071g" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Red/Pawn_Red.png" id="3_vad3e"]
[ext_resource type="Texture2D" uid="uid://qxyr4fcmpftj" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="4_co0aw"]
[ext_resource type="Script" path="res://Enemy.gd" id="4_cuvmd"]
[ext_resource type="Texture2D" uid="uid://bilta1nh5axxl" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/UI/Pointers/02.png" id="6_fklbq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bn4o6"]
texture = ExtResource("2_1mnu3")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
18:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0

[sub_resource type="TileSet" id="TileSet_axduq"]
sources/0 = SubResource("TileSetAtlasSource_bn4o6")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3p2i"]
radius = 34.0
height = 74.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2ohcg"]
atlas = ExtResource("3_vad3e")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6qdv"]
atlas = ExtResource("3_vad3e")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2malp"]
atlas = ExtResource("3_vad3e")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_85ij4"]
atlas = ExtResource("3_vad3e")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmwg1"]
atlas = ExtResource("3_vad3e")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnlst"]
atlas = ExtResource("3_vad3e")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_et53i"]
atlas = ExtResource("3_vad3e")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlgnw"]
atlas = ExtResource("3_vad3e")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xakd"]
atlas = ExtResource("3_vad3e")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r16yc"]
atlas = ExtResource("3_vad3e")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k6ev"]
atlas = ExtResource("3_vad3e")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_84q6x"]
atlas = ExtResource("3_vad3e")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpt6v"]
atlas = ExtResource("3_vad3e")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_frcy7"]
atlas = ExtResource("3_vad3e")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pabt3"]
atlas = ExtResource("3_vad3e")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dy7t"]
atlas = ExtResource("3_vad3e")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fsl5"]
atlas = ExtResource("3_vad3e")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x436x"]
atlas = ExtResource("3_vad3e")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ahmmt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ohcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6qdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2malp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85ij4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmwg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnlst")
}],
"loop": true,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_et53i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlgnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xakd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r16yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k6ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84q6x")
}],
"loop": true,
"name": &"Attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpt6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frcy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pabt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dy7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fsl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x436x")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wu88i"]
atlas = ExtResource("4_co0aw")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew6gq"]
atlas = ExtResource("4_co0aw")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_drqhw"]
atlas = ExtResource("4_co0aw")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1je3b"]
atlas = ExtResource("4_co0aw")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n8x3"]
atlas = ExtResource("4_co0aw")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf4fn"]
atlas = ExtResource("4_co0aw")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6h4n"]
atlas = ExtResource("4_co0aw")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_brbdv"]
atlas = ExtResource("4_co0aw")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lluea"]
atlas = ExtResource("4_co0aw")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4su44"]
atlas = ExtResource("4_co0aw")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjyh6"]
atlas = ExtResource("4_co0aw")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vyap"]
atlas = ExtResource("4_co0aw")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjadw"]
atlas = ExtResource("4_co0aw")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0vgy"]
atlas = ExtResource("4_co0aw")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i63iw"]
atlas = ExtResource("4_co0aw")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_23rk8"]
atlas = ExtResource("4_co0aw")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj372"]
atlas = ExtResource("4_co0aw")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfmck"]
atlas = ExtResource("4_co0aw")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wevd"]
atlas = ExtResource("4_co0aw")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_i08t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu88i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew6gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1je3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n8x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf4fn")
}],
"loop": true,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6h4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brbdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lluea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4su44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjyh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyap")
}],
"loop": true,
"name": &"Attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjadw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0vgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i63iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23rk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfmck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wevd")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[node name="beta_test_screen" type="Node2D"]
script = ExtResource("1_cgppg")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_axduq")
format = 2
layer_0/tile_data = PackedInt32Array(2359301, 0, 3, 2359305, 65536, 3, 2359309, 65536, 3, 2359313, 65536, 3, 2359317, 65536, 3, 2359321, 65536, 3, 2359325, 65536, 3, 2359329, 65536, 3, 2359333, 393216, 3, 2359337, 393216, 3, 2359341, 393216, 3, 2359345, 393216, 3, 2359349, 393216, 3, 2359353, 393216, 3, 2359357, 393216, 3, 2359361, 458752, 3)

[node name="Character" type="CharacterBody2D" parent="."]
script = ExtResource("3_2a16f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
position = Vector2(164, 582)
shape = SubResource("CapsuleShape2D_a3p2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Character"]
position = Vector2(166, 581)
sprite_frames = SubResource("SpriteFrames_ahmmt")
animation = &"Idle"

[node name="Label" type="Label" parent="Character"]
offset_left = 137.0
offset_top = 443.0
offset_right = 234.0
offset_bottom = 544.0
text = "HP: 0
ATK: 0
DEF: 0
MP: 0
"

[node name="Enemy" type="CharacterBody2D" parent="."]
script = ExtResource("4_cuvmd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy"]
position = Vector2(940, 581)
sprite_frames = SubResource("SpriteFrames_i08t2")
animation = &"Idle"
flip_h = true

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
position = Vector2(938, 582)
shape = SubResource("CapsuleShape2D_a3p2i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(938, 582)
shape = SubResource("CapsuleShape2D_a3p2i")

[node name="ui_selected" type="Sprite2D" parent="Enemy"]
visible = false
modulate = Color(1, 1, 1, 0.662745)
position = Vector2(939, 583)
scale = Vector2(1.82227, 1.8457)
texture = ExtResource("6_fklbq")

[node name="Label" type="Label" parent="Enemy"]
offset_left = 902.0
offset_top = 439.0
offset_right = 971.0
offset_bottom = 540.0
text = "HP: 0
ATK: 0
DEF: 0
MP: 0
"

[node name="Button" type="Button" parent="."]
offset_left = 449.0
offset_top = 307.0
offset_right = 642.0
offset_bottom = 367.0
text = "Attack"

[connection signal="input_event" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_input_event"]
[connection signal="pressed" from="Button" to="." method="_on_attack_button_pressed"]
